[package]
name = "rsdoc"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/cocalon/rsdoc"
description = """
Transform PlandUML/Drawio diagrams in doc comments as PNG images.
"""
keywords = ["rustdoc", "documentation", "plantuml", "uml", "drawio"]
categories = ["development-tools"]

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = []

[dependencies]
proc-macro2 = "1"
syn = "1.0.41"
quote = "1"
ureq = "2.6.2"
clap = {version = "3.1.6", features = ["derive"]}
deflate = "1.0.0"
rust-crypto = "0.2.36"

[lib]
proc-macro = true
path = "src/lib.rs"
